# docs/api/openapi.yaml
@@ -4,7 +4,7 @@ openapi: 3.0.1
 info:
   title: Account Service
   description: Service for working with user accounts
-  version: 1.4.0
+  version: 1.4.1
 
 
 paths:
@@ -182,11 +182,12 @@ components:
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/Transaction'
-            minItems: 2
-            maxItems: 2
+            type: object
+            properties:
+              debit:
+                $ref: '#/components/schemas/Transaction'
+              credit:
+                $ref: '#/components/schemas/Transaction'
 
     OK.History:
       description: Success
